# linefetch

./: Cargo.toml  LICENSE  README.md
src/: color.rs  config.rs  distro.rs  main.rs  modules.rs
