[package]
name = "linefetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.7"
os-release = "0.1.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
xdg = { version = "2.5.2", features = ["serde"] }
